--- a/articles/storsimple/TOC.yml
+++ b/articles/storsimple/TOC.yml
@@ -428,7 +428,7 @@
     - name: 服务更新
       href: 'https://azure.microsoft.com/updates/?product=storsimple'
     - name: 支持博客
-      href: 'https://blogs.msdn.com/b/storsimple/'
+      href: 'https://docs.microsoft.com/archive/blogs/storsimple/'
     - name: 第三方声明
       href: 'https://download.microsoft.com/download/2/0/0/2003271D-69D5-4143-85A2-F1D8EA058F52/StorSimple TPNs.zip'
     - name: 视频
