--- a/articles/azure-relay/TOC.yml
+++ b/articles/azure-relay/TOC.yml
@@ -42,8 +42,10 @@
           href: network-security.md
     - name: 混合连接协议
       href: relay-hybrid-connections-protocol.md
-- name: 如何
+- name: 操作方式
   items:
+    - name: 跨区域移动
+      href: move-across-regions.md
     - name: 从 Azure Service Manager（经典）API 迁移到资源管理器 API
       href: ../service-bus-messaging/deprecate-service-bus-management.md?toc=%2fazure%2fservice-bus-relay%2ftoc.json
     - name: 规划和设计
@@ -81,7 +83,7 @@
           href: /dotnet/api/microsoft.azure.relay
         - name: Microsoft.ServiceBus
           href: /dotnet/api/Microsoft.ServiceBus
-    - name: 异常
+    - name: 例外
       href: relay-exceptions.md
     - name: 端口设置
       href: relay-port-settings.md
