--- a/articles/cloud-shell/TOC.yml
+++ b/articles/cloud-shell/TOC.yml
@@ -13,9 +13,9 @@
     - name: Ansible
       items:
         - name: 运行 Ansible playbook
-          href: /azure/ansible/ansible-run-playbook-in-cloudshell?toc=/azure/cloud-shell/toc.json&bc=/azure/bread/toc.json
+          href: /azure/developer/ansible/getting-started-cloud-shell?bc=%252fazure%252fbread%252ftoc.json&toc=%252fazure%252fcloud-shell%252ftoc.json
         - name: 管理 Azure 动态库存
-          href: /azure/ansible/ansible-manage-azure-dynamic-inventories?toc=/azure/cloud-shell/toc.json&bc=/azure/bread/toc.json
+          href: /azure/developer/ansible/dynamic-inventory-configure?bc=%252fazure%252fbread%252ftoc.json&toc=%252fazure%252fcloud-shell%252ftoc.json
     - name: Terraform
       items:
         - name: 创建执行计划
