--- a/articles/docker/toc.yml
+++ b/articles/docker/toc.yml
@@ -10,15 +10,15 @@
     - name: 使用 Docker 和 PostgreSQL 的 Python Web 应用
       href: ../app-service/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
     - name: 将 CI/CD 与 Docker、Jenkins 和 Linux 配合使用
-      href: /azure/jenkins/tutorial-jenkins-github-docker-cicd
+      href: /azure/developer/jenkins/pipeline-with-github-and-docker
 - name: 操作指南
   items:
     - name: Docker VM 扩展
-      href: /azure/virtual-machines/linux/dockerextension
+      href: 'https://github.com/Azure/azure-docker-extension/blob/master/README.md'
     - name: Docker 计算机
-      href: /azure/virtual-machines/linux/docker-machine
+      href: ../virtual-machines/linux/docker-machine.md
     - name: Docker 容器注册表
-      href: /azure/container-registry/container-registry-get-started-portal
+      href: ../container-registry/container-registry-get-started-portal.md
 - name: 资源
   items:
     - name: Azure 路线图
