--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -182,7 +182,7 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/updates/?updateType=security&category=security&query=sentinel'
     - name: Azure 安全性、隐私性与合规性博客
-      href: 'https://blogs.msdn.com/b/azuresecurity/'
+      href: 'https://docs.microsoft.com/archive/blogs/azuresecurity/'
     - name: 区域可用性
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=azure-sentinel'
     - name: 定价
