commit translated contents

--- a/articles/azure-arc/data/breadcrumb/toc.yml
+++ b/articles/azure-arc/data/breadcrumb/toc.yml
@@ -8,4 +8,4 @@
       items:
         - name: 数据
           tocHref: /sql/azdata/
-          topicHref: /azure/azure-arc/data/index
+          topicHref: /azure/azure-arc
