--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -206,6 +206,10 @@
       items:
         - name: 排查添加应用时出现的问题
           href: troubleshoot-adding-apps.md
+        - name: 排查基于密码的单一登录问题
+          href: troubleshoot-password-based-sso.md
+        - name: 排查基于 SAML 的单一登录的问题
+          href: troubleshoot-saml-based-sso.md
         - name: 排查用户登录问题
           items:
             - name: 意外的许可提示
@@ -224,14 +228,6 @@
               href: application-sign-in-problem-federated-sso-gallery.md
             - name: 登录自定义开发的应用时出现的问题
               href: application-sign-in-problem-custom-dev.md
-        - name: 排查单一登录问题
-          items:
-            - name: 排查基于密码的单一登录问题
-              href: troubleshoot-password-based-sso.md
-            - name: 配置联合单一登录时常见的问题 - 库应用
-              href: configure-federated-single-sign-on-gallery-applications-problems.md
-            - name: 配置联合单一登录时常见的问题 - 非库应用
-              href: configure-federated-single-sign-on-non-gallery-applications-problems.md
         - name: 排查本地应用故障
           items:
             - name: 应用程序代理故障排除
