--- a/articles/active-directory/app-provisioning/toc.yml
+++ b/articles/active-directory/app-provisioning/toc.yml
@@ -55,6 +55,8 @@
           href: check-status-user-account-provisioning.md
         - name: 导出和导入配置
           href: export-import-provisioning-configuration.md
+        - name: 预配报表
+          href: ../reports-monitoring/concept-provisioning-logs.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
     - name: 排查应用程序预配问题
       items:
         - name: 已知问题
