--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -262,6 +262,8 @@
           href: how-to-connect-health-diagnose-sync-errors.md
         - name: Azure AD Connect Health 警报目录
           href: how-to-connect-health-alert-catalog.md
+        - name: Azure AD Connect Health 数据检索
+          href: how-to-connect-health-data-retrieval.md
     - name: 管理 Azure AD Connect Sync
       items:
         - name: 暂存服务器和灾难恢复
