--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -52,6 +52,8 @@
           href: users-sharing-accounts.md
         - name: 将用户分配到管理员角色
           href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=azure%2factive-directory%2fusers-groups-roles%2fcontext%2fugr-context
+        - name: 用户管理增强功能
+          href: users-search-enhanced.md
         - name: 批量删除用户
           href: users-bulk-delete.md
         - name: 还原已删除的用户
