--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -187,7 +187,7 @@
               href: concepts-data-flow-monitoring.md
             - name: 数据流性能
               href: concepts-data-flow-performance.md
-            - name: 管理图
+            - name: 管理数据流画布
               href: concepts-data-flow-manage-graph.md
             - name: 表达式生成器
               href: concepts-data-flow-expression-builder.md
