--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -138,7 +138,7 @@
           href: data-lake-store-power-bi.md
         - name: 与数据目录配合使用
           href: data-lake-store-with-data-catalog.md
-        - name: 在 SQL 数据仓库中与 PolyBase 配合使用
+        - name: 在 Azure Synapse Analytics 中与 PolyBase 配合使用
           href: ../sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
         - name: 与 SQL Server Integration Services 配合使用
           href: 'https://docs.microsoft.com/sql/integration-services/connection-manager/azure-data-lake-store-connection-manager'
