--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -36,12 +36,6 @@
       href: concepts-security.md
 - name: 操作指南
   items:
-    - name: 开发
-      items:
-        - name: 使用 API 和 SDK
-          href: how-to-use-apis-sdks.md
-        - name: 使用 AutoRest 创建自定义 SDK
-          href: how-to-create-custom-sdks.md
     - name: 部署
       items:
         - name: 使用 Azure 数字孪生 CLI
@@ -78,6 +72,14 @@
           href: how-to-create-azure-function.md
         - name: 查询孪生图
           href: how-to-query-graph.md
+    - name: 开发客户端应用
+      items:
+        - name: 使用 API 和 SDK
+          href: how-to-use-apis-sdks.md
+        - name: 使用 AutoRest 创建自定义 SDK
+          href: how-to-create-custom-sdks.md
+        - name: 与 Azure SignalR 服务集成
+          href: how-to-integrate-azure-signalr.md
     - name: 连接输入
       items:
         - name: 从 IoT 中心引入遥测数据
@@ -188,6 +190,8 @@
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/'
         - name: Azure 数字孪生自定义 Swagger
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/'
+        - name: SignalR 集成示例
+          href: 'https://docs.microsoft.com/samples/azure-samples/digitaltwins-signalr-webapp-sample/digital-twins-samples/'
     - name: Azure 工具
       items:
         - name: Azure Cloud Shell
