--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -312,6 +312,8 @@
           href: how-to-train-keras.md
         - name: PyTorch
           href: how-to-train-pytorch.md
+        - name: 使用自定义 Docker 映像进行训练
+          href: how-to-train-with-custom-image.md
         - name: 跟踪和监视培训
           items:
             - name: 启动、监视或取消运行
