--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 17cc7914c8e02d3b38e2527e1c0bff3afb885b0b
-  ms.sourcegitcommit: 420c30c760caf5742ba2e71f18cfd7649d1ead8a
+  ms.openlocfilehash: 7b64ef2739b8e6531f7531f9a135b7fb5ffe3467
+  ms.sourcegitcommit: d0541eccc35549db6381fa762cd17bc8e72b3423
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89055090"
+  ms.lasthandoff: 09/09/2020
+  ms.locfileid: "89568012"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -37,15 +37,15 @@ conceptualContent:
   items:
   - title: 语音转文本
     links:
+    - itemType: overview
+      text: 关于语音转文本
+      url: speech-to-text.md
     - itemType: quickstart
-      text: 识别来自麦克风的语音
-      url: quickstarts/speech-to-text-from-microphone.md
-    - itemType: quickstart
-      text: 识别音频文件中的语音
-      url: quickstarts/speech-to-text-from-file.md
+      text: 语音转文本入门
+      url: get-started-speech-to-text.md
     - itemType: how-to-guide
-      text: 语音识别基础知识
-      url: speech-to-text-basics.md
+      text: 使用自定义语音识别提高准确性
+      url: how-to-custom-speech.md
     footerLink:
       text: 更多
       url: index-speech-to-text.yml
@@ -187,7 +187,7 @@ tools:
   - title: Java
     imageSrc: https://docs.microsoft.com/media/logos/logo_java.svg
     url: https://aka.ms/csspeech/javaref
-  - title: JavaScript
+  - title: Javascript
     imageSrc: https://docs.microsoft.com/media/logos/logo_js.svg
     url: https://aka.ms/csspeech/javascriptref
   - title: Objective-C 和 Swift
