--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: SnehaGunda
   ms.author: sngun
   ms.date: 09/10/2019
-  ms.openlocfilehash: b96e1dcc29afdfa7ed6ead8a77a43e7ac4ab617a
-  ms.sourcegitcommit: b33c9ad17598d7e4d66fe11d511daa78b4b8b330
+  ms.openlocfilehash: 8c3330849801e00646af77a3759430035331e953
+  ms.sourcegitcommit: d0541eccc35549db6381fa762cd17bc8e72b3423
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88854813"
+  ms.lasthandoff: 09/09/2020
+  ms.locfileid: "89567140"
 landingContent:
 - title: 关于 Azure Cosmos DB
   linkLists:
@@ -27,7 +27,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: 与 MongoDB 的网络协议兼容性
-      url: mongodb-feature-support.md
+      url: mongodb-feature-support-36.md
     - text: 与 Apache Cassandra 的网络协议兼容性
       url: cassandra-support.md
     - text: 与 Tinkerpop Gremlin 的网络协议兼容性
@@ -182,7 +182,7 @@ landingContent:
       url: sql-api-sdk-dotnet.md
     - text: Java
       url: sql-api-sdk-java.md
-    - text: JavaScript
+    - text: Javascript
       url: sql-api-sdk-node.md
     - text: REST
       url: /rest/api/cosmos-db/
