--- a/articles/media-services/video-indexer/toc.yml
+++ b/articles/media-services/video-indexer/toc.yml
@@ -102,6 +102,7 @@
     - name: 区域可用性
       href: 'https://azure.microsoft.com/regions/services/'
     - name: 区域
+      displayName: location
       href: regions.md
     - name: 常见问题解答
       href: faq.md
