--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -924,8 +924,6 @@
               href: virtual-machines/windows/doc-changes-updates-release-notes.md
         - name: 快速入门
           items:
-            - name: 创建 SQL VM
-              items: null
             - name: 门户
               href: virtual-machines/windows/sql-vm-create-portal-quickstart.md
             - name: PowerShell
@@ -1079,7 +1077,7 @@
               href: ./database/policy-reference.md
         - name: 资源
           items:
-            - name: 常见问题解答
+            - name: 常见问题
               href: virtual-machines/windows/frequently-asked-questions-faq.md
             - name: 定价
               href: virtual-machines/windows/pricing-guidance.md
@@ -1115,7 +1113,7 @@
               href: virtual-machines/linux/rhel-high-availability-listener-tutorial.md
         - name: 资源
           items:
-            - name: 常见问题解答
+            - name: 常见问题
               href: virtual-machines/linux/frequently-asked-questions-faq.md
             - name: “Linux 上的 SQL Server”文档
               href: 'https://docs.microsoft.com/sql/linux/sql-server-linux-overview'
