--- a/articles/azure-sql/database/monitoring-tuning-index.yml
+++ b/articles/azure-sql/database/monitoring-tuning-index.yml
@@ -9,15 +9,15 @@ metadata:
   ms.custom: sqldbrb=2
   ms.topic: landing-page
   ms.collection: performance
-  author: CarlRabeler
-  ms.author: carlrab
+  author: stevestein
+  ms.author: sstein
   ms.date: 03/10/2020
-  ms.openlocfilehash: 21bf93db179ef2b459429fab6b30f5fe6d9d62b0
-  ms.sourcegitcommit: 12f23307f8fedc02cd6f736121a2a9cea72e9454
+  ms.openlocfilehash: 678d7b0094a4734fc76019cc20ed058744bbdc36
+  ms.sourcegitcommit: 3be3537ead3388a6810410dfbfe19fc210f89fec
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/30/2020
-  ms.locfileid: "84220511"
+  ms.lasthandoff: 09/10/2020
+  ms.locfileid: "89651475"
 landingContent:
 - title: 监视和性能优化入门
   linkLists:
