--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -224,6 +224,9 @@
         - name: 使用 Python SDK
           displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight, low priority'
           href: how-to-create-attach-compute-sdk.md
+        - name: Azure Kubernetes 服务
+          displayName: 'AKS, inference'
+          href: how-to-create-attach-kubernetes.md
     - name: 设置你的环境
       items:
         - name: 设置开发环境
