--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -114,6 +114,8 @@
           href: understand/mca-overview.md
         - name: Microsoft 合作伙伴协议的计费帐户
           href: understand/mpa-overview.md
+        - name: 在合作伙伴之间转让订阅（预览）
+          href: manage/azure-plan-subscription-transfer-partners.md
 - name: 操作指南
   items:
     - name: 配置 Azure 成本管理 + 计费
