--- a/articles/asc-for-iot/TOC.yml
+++ b/articles/asc-for-iot/TOC.yml
@@ -5,7 +5,7 @@
   items:
     - name: 解决方案体系结构
       href: architecture.md
-    - name: Azure RTOS 的安全解决方案
+    - name: Azure RTO 安全模块
       href: iot-security-azure-rtos.md
     - name: 安全代理
       href: security-agent-architecture.md
@@ -23,6 +23,8 @@
 - name: 快速入门
   expanded: true
   items:
+    - name: 配置 Azure RTO 安全模块
+      href: quickstart-azure-rtos-security-module.md
     - name: 将适用于 IoT 的 Azure 安全中心载入到 IoT 中心
       href: quickstart-onboard-iot-hub.md
     - name: 配置解决方案
@@ -37,6 +39,12 @@
       href: quickstart-investigate-security-alerts.md
 - name: 概念
   items:
+    - name: Azure RTO 安全模块
+      items:
+        - name: 了解 Azure RTO 安全模块
+          href: concept-rtos-security-module.md
+        - name: Azure RTO 警报和建议的安全模块
+          href: concept-rtos-security-alerts-recommendations.md
     - name: 安全代理身份验证
       href: concept-security-agent-authentication-methods.md
     - name: 安全模块
@@ -55,6 +63,8 @@
       href: concept-pricing.md
 - name: 操作指南
   items:
+    - name: 使用 Azure RTO 安全模块
+      href: how-to-azure-rtos-security-module.md
     - name: 我应该部署哪个代理？
       items:
         - name: 选择要部署的代理
@@ -87,13 +97,29 @@
       href: how-to-configure-with-sentinel.md
     - name: 自定义解决方案
       href: how-to-customize-solution.md
-- name: 资源
+- name: 参考
   items:
+    - name: Azure RTO 安全模块 API
+      href: azure-rtos-security-module-api.md
     - name: 常见问题
       href: resources-frequently-asked-questions.md
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
-    - name: Azure 安全性、隐私性与合规性博客
-      href: 'https://docs.microsoft.com/archive/blogs/azuresecurity/'
+- name: 资源
+  items:
+    - name: 利用 Microsoft Learn 掌握安全技能
+      href: 'https://docs.microsoft.com/learn/browse/?term=securityS&terms=securityS'
+    - name: Azure 安全中心文档
+      href: 'https://docs.microsoft.com/azure/security-center/'
+    - name: Azure 安全文档
+      href: 'https://docs.microsoft.com/azure/security/'
+    - name: Stack Overflow 上的 Azure RTO 安全模块
+      href: 'https://stackoverflow.com/questions/tagged/azure-rtos+azure-iot-security-module'
+    - name: Azure IoT 安全性、隐私性与合规性博客
+      href: 'https://techcommunity.microsoft.com/t5/iot-security/bd-p/IoTSecurity'
     - name: 区域可用性
       href: 'https://azure.microsoft.com/regions/services/'
+    - name: 定价
+      href: 'https://azure.microsoft.com/pricing/details/security-center/'
+    - name: 视频
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=security-center&service=internet-of-things&page=1&sort=newest'
