--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -159,7 +159,7 @@
             - name: .NET (C#) SDK - 源
               href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Azure.DigitalTwins.Core'
             - name: JavaScript SDK - npm
-              href: 'https://www.npmjs.com/package/@azure/digital-twins'
+              href: 'https://www.npmjs.com/package/@azure/digital-twins/v/1.0.0-preview.1'
     - name: 数字孪生 CLI
       items:
         - name: 数字孪生 CLI 参考
