commit translated contents

--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
-  ms.openlocfilehash: 115c2b7058941512bf75f2b45b17d4a0a806c1af
-  ms.sourcegitcommit: 56cbd6d97cb52e61ceb6d3894abe1977713354d9
+  ms.openlocfilehash: f6893522b66f20dd26905084e5b09d303cbfd5b3
+  ms.sourcegitcommit: f845ca2f4b626ef9db73b88ca71279ac80538559
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88690283"
+  ms.lasthandoff: 09/09/2020
+  ms.locfileid: "89612768"
 landingContent:
 - title: 关于 Microsoft 标识平台
   linkLists:
@@ -120,6 +120,14 @@ landingContent:
   linkLists:
   - linkListType: whats-new
     links:
+    - text: 快速入门：注册应用（重写）
+      url: quickstart-register-app.md
+    - text: 快速入门：公开 Web API（重写）
+      url: quickstart-configure-app-expose-web-apis.md
+    - text: 快速入门：访问 Web API（重写）
+      url: quickstart-configure-app-access-web-apis.md
+    - text: 将 Xamarin Android 代理应用迁移到 MSAL.NET
+      url: msal-net-migration-android-broker.md
     - text: 处理错误和异常 - Android
       url: msal-android-handling-exceptions.md
     - text: 声明中的目录架构扩展属性
