--- a/articles/active-directory/users-groups-roles/TOC.yml
+++ b/articles/active-directory/users-groups-roles/TOC.yml
@@ -9,8 +9,8 @@
     - name: 将用户添加到 Azure AD
       href: ../fundamentals/add-users-azure-active-directory.md?context=azure%2factive-directory%2fusers-groups-roles%2fcontext%2fugr-context
     - name: 将许可证分配给用户
-      href: ../fundamentals/license-users-groups.md?context=azure%2factive-directory%2fusers-groups-roles%2fcontext%2fugr-context
-    - name: 授权执行无限次应用注册
+      href: /azure/active-directory/fundamentals/license-users-groups?context=azure/active-directory/users-groups-roles/context/ugr-context
+    - name: 创建无限次应用注册
       href: roles-quickstart-app-registration-limits.md
     - name: 设置组过期策略
       href: groups-quickstart-expiration.md
@@ -175,6 +175,8 @@
               href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=azure%2factive-directory%2fusers-groups-roles%2fcontext%2fugr-context
             - name: 使用 PowerShell 分配自定义角色
               href: roles-assign-powershell.md
+            - name: 适合企业应用的自定义角色
+              href: custom-enterprise-apps.md
             - name: 自定义角色权限
               href: roles-custom-available-permissions.md
             - name: 委托应用管理权限
