--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -24,6 +24,8 @@
   items:
     - name: 与 Power Virtual Agent 集成
       href: Tutorials/integrate-with-power-virtual-assistant-fallback-topic.md
+    - name: 使用 Azure 机器人服务创建 FAQ 机器人
+      href: Tutorials/create-faq-bot-with-azure-bot-service.md
     - name: 使用批处理文件进行测试
       href: Quickstarts/batch-testing.md
 - name: 概念
@@ -91,7 +93,7 @@
         - name: 迁移到新知识库
           href: Tutorials/migrate-knowledge-base.md
           displayName: 'metadata, pair'
-        - name: 测试
+        - name: 测试知识库
           href: How-To/test-knowledge-base.md
     - name: 管理 QnA 对
       items:
