--- a/articles/storage/blobs/index.yml
+++ b/articles/storage/blobs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: normesta
   ms.author: normesta
   ms.date: 08/20/2019
-  ms.openlocfilehash: 9db4921b6f0b8382b69dbac658536b5151bdd653
-  ms.sourcegitcommit: f7d057377d2b1b8ee698579af151bcc0884b32b4
+  ms.openlocfilehash: b830092f6a54d2dc460c7aba4338c695d27b16b9
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/24/2020
-  ms.locfileid: "82117244"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90019098"
 landingContent:
 - title: 关于 Blob 存储
   linkLists:
@@ -126,7 +126,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: 使用 Azure AD 帐户访问 Blob 数据
-      url: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      url: authorize-blob-access-portal.md
     - text: 使用 RBAC 管理访问权限
       url: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - text: 使用托管标识授予对 Blob 存储的访问权限
